macros/tests/ui/attr_arguments.rs
#[macros::main(name = "kernel_main")]
pub fn kernel_main() -> ! {}

fn main() {}
